# syslog-ng-incubator

./: .gitignore  .travis.yml  COPYING  Makefile.am  NEWS  README.md  configure.ac  syslog-ng-rust-deps.pc.in
debian/: Makefile.am  changelog  changelog.in  control  copyright  gbp.conf  rules  syslog-ng-incubator-mods.install  syslog-ng-mod-basicfuncs-plus.install  syslog-ng-mod-elasticsearch.examples  syslog-ng-mod-elasticsearch.install  syslog-ng-mod-lua.install  syslog-ng-mod-perl.install  syslog-ng-mod-rss.install  syslog-ng-mod-trigger.install  watch
docker/: Dockerfile
m4/: check_java_version.m4  incubator.m4
modules/: Makefile.am
modules/basicfuncs-plus/: Makefile.am  basic-funcs-plus.c  cond-funcs.c  number-funcs.c  state-funcs.c  string-funcs.c
modules/date/: Makefile.am  date-parser-grammar.ym  date-parser-parser.c  date-parser-plugin.c  date-parser.c  date-parser.h
modules/date/tests/: Makefile.am  test_date.c
modules/getent/: Makefile.am  getent-group.c  tfgetent.c
modules/graphite/: Makefile.am  graphite-output.c  graphite-plugin.c
modules/grok/: Makefile.am  README.md  grok-parser-example.conf  grok-parser-grammar.ym  grok-parser-parser.c  grok-parser-parser.h  grok-parser-plugin.c  grok-parser.c  grok-parser.h
modules/grok/tests/: Makefile.am  test_grok.c
modules/java/: DummyStructuredDestination.java  LogDestination.java  LogMessage.java  Makefile.am  README.md  SyslogNg.java  SyslogNgClassLoader.java  SyslogNgDestination.java  SyslogNgInterface.java  java-class-loader.c  java-class-loader.h  java-destination-proxy.c  java-destination-proxy.h  java-destination.c  java-destination.h  java-grammar.ym  java-logmsg-proxy.c  java-logmsg-proxy.h  java-parser.c  java-parser.h  java-plugin.c  java-syslog-ng-class.c  java-syslog-ng-class.h  java_machine.c  java_machine.h
modules/java/native/: java-class-loader.c  java-destination.c
modules/java/proxies/: java-destination-proxy.c
modules/java/tools/: TestClass.java  elasticsearch.conf  syslog-ng.conf.example
modules/kafka/: Makefile.am  README.md  kafka-grammar.ym  kafka-parser.c  kafka.c  kafka.h
modules/kafka-c/: kafka.c
modules/lua/: Makefile.am  elasticsearch.conf  elasticsearch.lua  lua-dest.c  lua-dest.h  lua-example.conf  lua-example.lua  lua-grammar.ym  lua-msg.c  lua-msg.h  lua-parser.c  lua-parser.h  lua-plugin.c  lua-template.c  lua-template.h  lua-utils.c  lua-utils.h  lua.c  lua.h
modules/monitor-source/: Makefile.am  README.md  monitor-source-example.conf  monitor-source-example.lua  monitor-source-grammar.ym  monitor-source-parser.c  monitor-source-parser.h  monitor-source-plugin.c  monitor-source.c  monitor-source.h
modules/mysql/: Makefile.am  mysql-mod-grammar.ym  mysql-mod-parser.c  mysql-mod-parser.h  mysql-mod-plugin.c  mysql-mod.c  mysql-mod.h
modules/native/: Makefile.am  native-grammar.ym  native-parser.h  parser.c
modules/perl/: Makefile.am  perl-dest.c  perl-dest.h  perl-example.conf  perl-example.pl  perl-grammar.ym  perl-parser.c  perl-parser.h  perl-plugin.c
modules/python/: Makefile.am  python-dest.c  python-plugin.c
modules/riemann/: Makefile.am  riemann-example.conf  riemann-grammar.ym  riemann-parser.c  riemann-plugin.c  riemann.c  riemann.h
modules/rss/: Makefile.am  rss-example.conf  rss-grammar.y  rss-grammar.ym  rss-parser.c  rss-parser.h  rss.c  rss.h
modules/rust/: Makefile.am  filter.c  filter.h  parser.c  parser.h  rust-filter.c  rust-grammar.ym  rust-parser.c  rust-parser.h  rust-plugin.c
modules/rust-modules/: .gitignore  Cargo.toml  Makefile.am  README.md
modules/rust-modules/.cargo/: config
modules/rust-modules/dummy_filter/: Cargo.toml
modules/rust-modules/dummy_filter/src/: lib.rs
modules/rust-modules/in_list_filter/: Cargo.toml
modules/rust-modules/in_list_filter/src/: lib.rs
modules/rust-modules/include/: rust-filter-proxy.h
modules/rust-modules/src/: filter.rs  lib.rs
modules/rust-modules/syslog_ng_rust/: Cargo.toml  build.rs  fig.yml
modules/rust-modules/syslog_ng_rust/src/: cfg.rs  ffi.rs  filter.rs  lib.rs  types.rs
modules/rust-modules/syslog_ng_rust/src/logmsg/: ffi.rs  mod.rs
modules/rust-modules/syslog_ng_rust/src/messages/: ffi.rs  mod.rs
modules/trigger-source/: Makefile.am  README.md  trigger-source-example.conf  trigger-source-grammar.ym  trigger-source-parser.c  trigger-source-parser.h  trigger-source-plugin.c  trigger-source.c  trigger-source.h
modules/websocket/: Makefile  Makefile.am  README.md  client.c  client.h  client_example.c  index.html  server.h  server_example.c  websocket-destination.c  websocket-destination.h  websocket-grammar.ym  websocket-parser.c  websocket-parser.h  websocket-plugin.c  websocket-source.c  websocket-source.h  websocket-transport.c  websocket-transport.h
modules/websocket/sample_server/: Makefile  README.md  client.c  client.h  index.html  server.c  server.h
modules/websocket/test/: Makefile  README.md  index.html  test_client_dest.conf  test_server_dest.conf  test_source.conf  test_source_and_dest_together.conf
modules/websocket/ws_api/: .gitignore  README.md  client.c  client.h  client_example.c  server.c  server.h  server_example.c
modules/zmq/: Makefile.am  zmq-destination.c  zmq-destination.h  zmq-grammar.ym  zmq-module.h  zmq-parser.c  zmq-parser.h  zmq-plugin.c  zmq-source.c  zmq-source.h  zmq-transport.c  zmq-transport.h  zmq_install.sh
modules/zmq/scripts/: publisher.c  pusher.c  subscriber.c  test_pusher.py
modules/zmq/tests/: Makefile.am  test_zmq.c
modules/zmq/tests/functional/: Makefile.am  runtests.sh  test_suite.py  test_zmq_source.py
scl/: Makefile.am
scl/elasticsearch/: Makefile.am  elastic-example.conf  es-bridge  plugin.conf
scl/graphite/: Makefile.am  graphite-example.conf
tools/: Makefile.am
tools/visualize/: Makefile.am  README.md  logmongource.c
travis/: build
