include modules/riemann/Makefile.am
include modules/trigger-source/Makefile.am
include modules/monitor-source/Makefile.am
include modules/basicfuncs-plus/Makefile.am
include modules/rss/Makefile.am
include modules/lua/Makefile.am
include modules/graphite/Makefile.am
include modules/getent/Makefile.am
include modules/perl/Makefile.am
include modules/python/Makefile.am
